5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1800_2566.log
== TEST (2019-06-04 22:59:29) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
v1 = zeros(6)
segunda = 0
terca = 0
quarta = 0
quinta = 0
sexta = 0
sabado = 0
for x in v:
	if x == 2:
		segunda = segunda + 1
	elif x == 3:
		terca = terca + 1
	elif x == 4:
		quarta = quarta + 1
	elif x == 5:
		quinta = quinta + 1
	elif x == 6:
		sexta = sexta + 1
v[0] = segunda
v[1] = terca 
v[2] = quarta
v[3] = quinta
v[4] = sexta
v[5] = sabado
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:00:55) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
v1 = zeros(6)
segunda = 0
terca = 0
quarta = 0
quinta = 0
sexta = 0
sabado = 0
for x in v:
	if x == 2:
		segunda = segunda + 1
	elif x == 3:
		terca = terca + 1
	elif x == 4:
		quarta = quarta + 1
	elif x == 5:
		quinta = quinta + 1
	elif x == 6:
		sexta = sexta + 1
v[0] = segunda
v[1] = terca 
v[2] = quarta
v[3] = quinta
v[4] = sexta
v[5] = sabado
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:01:13) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
v1 = zeros(6)
segunda = 0
terca = 0
quarta = 0
quinta = 0
sexta = 0
sabado = 0
for x in v:
	if x == 2:
		segunda = segunda + 1
	elif x == 3:
		terca = terca + 1
	elif x == 4:
		quarta = quarta + 1
	elif x == 5:
		quinta = quinta + 1
	elif x == 6:
		sexta = sexta + 1
v[0] = segunda
v[1] = terca 
v[2] = quarta
v[3] = quinta
v[4] = sexta
v[5] = sabado
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:01:30) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
v1 = zeros(6)
segunda = 0
terca = 0
quarta = 0
quinta = 0
sexta = 0
sabado = 0
for x in v:
	if x == 2:
		segunda = segunda + 1
	elif x == 3:
		terca = terca + 1
	elif x == 4:
		quarta = quarta + 1
	elif x == 5:
		quinta = quinta + 1
	elif x == 6:
		sexta = sexta + 1
v[0] = segunda
v[1] = terca 
v[2] = quarta
v[3] = quinta
v[4] = sexta
v[5] = sabado
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:01:40) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
v1 = zeros(6)
segunda = 0
terca = 0
quarta = 0
quinta = 0
sexta = 0
sabado = 0
for x in v:
	if x == 2:
		segunda = segunda + 1
	elif x == 3:
		terca = terca + 1
	elif x == 4:
		quarta = quarta + 1
	elif x == 5:
		quinta = quinta + 1
	elif x == 6:
		sexta = sexta + 1
v[0] = segunda
v[1] = terca 
v[2] = quarta
v[3] = quinta
v[4] = sexta
v[5] = sabado
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:02:40) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
v1 = zeros(6)
segunda = 0
terca = 0
quarta = 0
quinta = 0
sexta = 0
sabado = 0
for x in v:
	if x == 2:
		segunda = segunda + 1
	elif x == 3:
		terca = terca + 1
	elif x == 4:
		quarta = quarta + 1
	elif x == 5:
		quinta = quinta + 1
	elif x == 6:
		sexta = sexta + 1
	elif x == 7:
		sabado = sabado + 1
v[0] = segunda
v[1] = terca 
v[2] = quarta
v[3] = quinta
v[4] = sexta
v[5] = sabado
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:05:17) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
v1 = zeros(6)
s = 0
t = 0
qa = 0
qi = 0
se = 0
sa = 0
for x in v:
	if x == 2:
		s = s + 1
	elif x == 3:
		t = t + 1
	elif x == 4:
		qa = qa+ 1
	elif x == 5:
		qi = q + 1
	elif x == 6:
		se = se + 1
	elif x == 7:
		sa = sa + 1
v[0] = s
v[1] = t
v[2] = qa
v[3] = qi
v[4] = se
v[5] = sa
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:05:55) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
v1 = zeros(6)
s = 0
t = 0
qa = 0
qi = 0
se = 0
sa = 0
for x in v:
	if x == 2:
		s = s + 1
	elif x == 3:
		t = t + 1
	elif x == 4:
		qa = qa+ 1
	elif x == 5:
		qi = q + 1
	elif x == 6:
		se = se + 1
	elif x == 7:
		sa = sa + 1
v1[0] = s
v2[1] = t
v3[2] = qa
v4[3] = qi
v5[4] = se
v6[5] = sa
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:06:32) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
v1 = zeros(6)
s = 0
t = 0
qa = 0
qi = 0
se = 0
sa = 0
for x in v:
	if x == 2:
		s = s + 1
	elif x == 3:
		t = t + 1
	elif x == 4:
		qa = qa+ 1
	elif x == 5:
		qi = q + 1
	elif x == 6:
		se = se + 1
	elif x == 7:
		sa = sa + 1
v1[0] = s
v1[1] = t
v1[2] = qa
v1[3] = qi
v1[4] = se
v1[5] = sa
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 23:06:55) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
v1 = zeros(6)
s = 0
t = 0
qa = 0
qi = 0
se = 0
sa = 0
for x in v:
	if x == 2:
		s = s + 1
	elif x == 3:
		t = t + 1
	elif x == 4:
		qa = qa+ 1
	elif x == 5:
		qi = q + 1
	elif x == 6:
		se = se + 1
	elif x == 7:
		sa = sa + 1
v1[0] = s
v1[1] = t
v1[2] = qa
v1[3] = qi
v1[4] = se
v1[5] = sa
print(v1)
-- EXECUTION TIME:
1.02985
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2566/main.py", line 18, in <module>
    qi = q + 1
NameError: name 'q' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:11:20) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
v1 = zeros(6)
s = 0
t = 0
qa = 0
qi = 0
se = 0
sa = 0
for x in v:
	if x == 2:
		s = s + 1
	elif x == 3:
		t = t + 1
	elif x == 4:
		qa = qa+ 1
	elif x == 5:
		qi = q + 1
	elif x == 6:
		se = se + 1
	elif x == 7:
		sa = sa + 1
v1[0] = s/size(v)*100
v1[1] = t/size(v)*100
v1[2] = qa/size(v)*100
v1[3] = qi/size(v)*100
v1[4] = se/size(v)*100
v1[5] = sa/size(v)*100
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 23:11:40) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
v1 = zeros(6)
s = 0
t = 0
qa = 0
qi = 0
se = 0
sa = 0
for x in v:
	if x == 2:
		s = s + 1
	elif x == 3:
		t = t + 1
	elif x == 4:
		qa = qa+ 1
	elif x == 5:
		qi = q + 1
	elif x == 6:
		se = se + 1
	elif x == 7:
		sa = sa + 1
v1[0] = s/size(v)*100
v1[1] = t/size(v)*100
v1[2] = qa/size(v)*100
v1[3] = qi/size(v)*100
v1[4] = se/size(v)*100
v1[5] = sa/size(v)*100
print(v1)
-- EXECUTION TIME:
1.11373
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2566/main.py", line 18, in <module>
    qi = q + 1
NameError: name 'q' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:11:47) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
v1 = zeros(6)
s = 0
t = 0
qa = 0
qi = 0
se = 0
sa = 0
for x in v:
	if x == 2:
		s = s + 1
	elif x == 3:
		t = t + 1
	elif x == 4:
		qa = qa+ 1
	elif x == 5:
		qi = q + 1
	elif x == 6:
		se = se + 1
	elif x == 7:
		sa = sa + 1
v1[0] = s/size(v)*100
v1[1] = t/size(v)*100
v1[2] = qa/size(v)*100
v1[3] = qi/size(v)*100
v1[4] = se/size(v)*100
v1[5] = sa/size(v)*100
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:11:50) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
v1 = zeros(6)
s = 0
t = 0
qa = 0
qi = 0
se = 0
sa = 0
for x in v:
	if x == 2:
		s = s + 1
	elif x == 3:
		t = t + 1
	elif x == 4:
		qa = qa+ 1
	elif x == 5:
		qi = q + 1
	elif x == 6:
		se = se + 1
	elif x == 7:
		sa = sa + 1
v1[0] = s/size(v)*100
v1[1] = t/size(v)*100
v1[2] = qa/size(v)*100
v1[3] = qi/size(v)*100
v1[4] = se/size(v)*100
v1[5] = sa/size(v)*100
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:12:13) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
v1 = zeros(6)
s = 0
t = 0
qa = 0
qi = 0
se = 0
sa = 0
for x in v:
	if x == 2:
		s = s + 1
	elif x == 3:
		t = t + 1
	elif x == 4:
		qa = qa+ 1
	elif x == 5:
		qi = q + 1
	elif x == 6:
		se = se + 1
	elif x == 7:
		sa = sa + 1
v1[0] = s/size(v)*100
v1[1] = t/size(v)*100
v1[2] = qa/size(v)*100
v1[3] = qi/size(v)*100
v1[4] = se/size(v)*100
v1[5] = sa/size(v)*100
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:13:43) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
v1 = zeros(6)
s = 0
t = 0
qa = 0
qi = 0
se = 0
sa = 0
for x in v:
	if x == 2:
		s = s + 1
	elif x == 3:
		t = t + 1
	elif x == 4:
		qa = qa+ 1
	elif x == 5:
		qi = qi + 1
	elif x == 6:
		se = se + 1
	elif x == 7:
		sa = sa + 1
v1[0] = round(s/size(v)*100, 1)
v1[1] = round(t/size(v)*100, 1)
v1[2] = round(qa/size(v)*100, 1)
v1[3] = round(qi/size(v)*100, 1)
v1[4] = round(se/size(v)*100, 1)
v1[5] = round(sa/size(v)*100, 1)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 23:13:58) 
-- CODE:
from numpy import*
v = array(eval(input("faltas: ")))
v1 = zeros(6)
s = 0
t = 0
qa = 0
qi = 0
se = 0
sa = 0
for x in v:
	if x == 2:
		s = s + 1
	elif x == 3:
		t = t + 1
	elif x == 4:
		qa = qa+ 1
	elif x == 5:
		qi = qi + 1
	elif x == 6:
		se = se + 1
	elif x == 7:
		sa = sa + 1
v1[0] = round(s/size(v)*100, 1)
v1[1] = round(t/size(v)*100, 1)
v1[2] = round(qa/size(v)*100, 1)
v1[3] = round(qi/size(v)*100, 1)
v1[4] = round(se/size(v)*100, 1)
v1[5] = round(sa/size(v)*100, 1)
print(v1)
-- EXECUTION TIME:
0.975285
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
